<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:id="@+id/repoDetailsLayout"
              android:orientation="vertical"
              android:padding="@dimen/layout_padding_size">
    <LinearLayout android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:orientation="vertical">
        <TextView android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:text="@string/repository_name_caption"
                  android:textSize="@dimen/description_size"
                  android:paddingTop="@dimen/text_padding_size"/>
        <TextView android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:text="Test repository name"
                  android:textSize="@dimen/data_size"
                  android:paddingLeft="@dimen/text_padding_size"
                  android:id="@+id/repository_name"/>
        <TextView android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:text="@string/repository_description_caption"
                  android:textSize="@dimen/description_size"
                  android:paddingTop="@dimen/text_padding_size"/>
        <TextView android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:text="Test Repository Description sdkljgsdklfjg fdkjgsdk;fljh sfdhkjs hlk;lsdjfhk;lh sdk;fljhk;l f"
                  android:textSize="@dimen/data_size"
                  android:paddingLeft="@dimen/text_padding_size"
                  android:id="@+id/repository_description"/>
        <TextView android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:text="@string/repository_forks_caption"
                  android:textSize="@dimen/description_size"
                  android:paddingTop="@dimen/text_padding_size"/>
        <TextView android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:text="3"
                  android:textSize="@dimen/count_size"
                  android:paddingLeft="@dimen/text_padding_size"
                  android:id="@+id/repository_forks"/>
        <TextView android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:text="@string/repository_watchers_caption"
                  android:textSize="@dimen/description_size"
                  android:paddingTop="@dimen/text_padding_size"/>
        <TextView android:layout_height="wrap_content"
                  android:layout_width="wrap_content"
                  android:text="4"
                  android:textSize="@dimen/count_size"
                  android:paddingLeft="@dimen/text_padding_size"
                  android:id="@+id/repository_watchers"/>
        <LinearLayout android:layout_width="fill_parent"
                      android:layout_height="fill_parent"
                      android:orientation="horizontal"
                      android:gravity="center">
            <Button android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/caption_button_commits"
                    android:layout_gravity="bottom"
                    android:id="@+id/see_commits_button"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>